--- a/app/css/style.css
+++ b/app/css/style.css
@@ -116,4 +116,53 @@ button.bg-dark:hover {
 							background: url('../imgs/loader.gif') 50% 50% no-repeat rgb(249,249,249);
 						}
 						
-						
+					
+
+.flip-box {
+  background-color: #fffff;
+  perspective: 1000px;
+}
+
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* .flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+ */
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-box-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-box-back {
+  background-color: #555;
+  color: white;
+   transform: rotateY(180deg); 
+}
+
+
+        .input-container input:focus, .input-container input:active {
+            outline: none;
+        }
+        .input-container input {
+            width: 80%;
+            float: left;
+        }
+
+        .input-container button {
+            float: right;
+        }
